--- a/bitnami/airflow/templates/worker/horizontalpodautoscaler.yaml
+++ b/bitnami/airflow/templates/worker/horizontalpodautoscaler.yaml
@@ -1,5 +1,5 @@
 {{- if and .Values.worker.autoscaling.enabled (or (eq .Values.executor "CeleryExecutor") (eq .Values.executor "CeleryKubernetesExecutor")) }}
-apiVersion: {{ include "common.capabilities.hpa.apiVersion" . }}
+apiVersion: {{ include "common.capabilities.hpa.apiVersion" ( dict "context" $ ) }}
 kind: HorizontalPodAutoscaler
 metadata:
   name: {{ printf "%s-worker" (include "common.names.fullname" .) }}
