--- a/bitnami/kubeapps/templates/apprepository/deployment.yaml
+++ b/bitnami/kubeapps/templates/apprepository/deployment.yaml
@@ -98,9 +98,9 @@ spec:
             - --namespace={{ .Release.Namespace }}
             - --global-repos-namespace={{ include "kubeapps.globalReposNamespace" . }}
             - --database-secret-name={{ include "kubeapps.postgresql.secretName" . }}
-            - --database-secret-key=postgres-password
+            - --database-secret-key=password
             - --database-url={{ printf "%s:%d" (include "kubeapps.postgresql.host" .) (int (include "kubeapps.postgresql.port" .)) }}
-            - --database-user=postgres
+            - --database-user={{ .Values.postgresql.auth.username }}
             - --database-name={{ .Values.postgresql.auth.database }}
             {{- if .Values.apprepository.crontab }}
             - --crontab={{ .Values.apprepository.crontab }}
