--- a/bitnami/kubeapps/templates/kubeappsapis/deployment.yaml
+++ b/bitnami/kubeapps/templates/kubeappsapis/deployment.yaml
@@ -148,11 +148,11 @@ spec:
             - name: ASSET_SYNCER_DB_NAME
               value: {{ .Values.postgresql.auth.database | quote }}
             - name: ASSET_SYNCER_DB_USERNAME
-              value: postgres
+              value: {{ .Values.postgresql.auth.username | quote }}
             - name: ASSET_SYNCER_DB_USERPASSWORD
               valueFrom:
                 secretKeyRef:
-                  key: postgres-password
+                  key: password
                   name: {{ include "kubeapps.postgresql.secretName" . }}
             {{- end }}
             {{- if .Values.kubeappsapis.extraEnvVars }}
