--- a/bitnami/kubeapps/values.yaml
+++ b/bitnami/kubeapps/values.yaml
@@ -1988,15 +1988,16 @@ testImage:
 ## PostgreSQL chart configuration
 ## ref: https://github.com/bitnami/charts/blob/master/bitnami/postgresql/values.yaml
 ## @param postgresql.enabled Deploy a PostgreSQL server to satisfy the applications database requirements
-## @param postgresql.auth.postgresPassword Password for 'postgres' user
-## ref: https://github.com/bitnami/bitnami-docker-postgresql/blob/master/README.md#setting-the-root-password-on-first-run
+## @param postgresql.auth.username Name for a custom user to create (overrides `auth.username`)
+## @param postgresql.auth.password Password for the custom user to create (overrides auth.password)
 ## @param postgresql.auth.database Name for a custom database to create
 ## @param postgresql.auth.existingSecret Name of existing secret to use for PostgreSQL credentials
 ##
 postgresql:
   enabled: true
   auth:
-    postgresPassword: ""
+    username: "kubeapps"
+    password: ""
     database: assets
     existingSecret: ""
   ## PostgreSQL Primary persistence configuration
